<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/dialog_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edit_text_title"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/dialog_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edit_dialog_description"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/dialog_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_box_url"
        android:importantForAutofill="no"
        android:inputType="textUri" />

    <LinearLayout
        android:id="@+id/news_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/dialog_apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:text="@string/apply"/>

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>