<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/news_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/title"
        android:textSize="46sp" />

    <ImageView
        android:id="@+id/news_activity_image"
        android:layout_width="match_parent"
        android:textAlignment="textStart"
        android:layout_height="400sp"
        android:scaleType="fitXY"
        android:contentDescription="@string/news_image" />

    <TextView
        android:id="@+id/news_activity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/news_activity_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textSize="14sp" />

</LinearLayout>

</ScrollView>