<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_dialog_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit"
        android:inputType="textPersonName"
        android:importantForAutofill="no"/>

    <LinearLayout
        android:id="@+id/edit_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_dialog_apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:text="@string/apply"/>

        <Button
            android:id="@+id/edit_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>