<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="end">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/newsapp"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/activity_main_linear"
                app:layout_constraintEnd_toEndOf="@+id/news_recycler_view"
                app:layout_constraintStart_toStartOf="@+id/news_recycler_view"
                app:layout_constraintTop_toBottomOf="@+id/app_name" />

            <LinearLayout
                android:id="@+id/activity_main_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news"
                    android:textSize="28sp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/activity_main_linear"
                    app:layout_constraintEnd_toEndOf="@+id/news_recycler_view"
                    app:layout_constraintStart_toStartOf="@+id/news_recycler_view"
                    app:layout_constraintTop_toBottomOf="@+id/app_name" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_linear"
                android:scrollbars="vertical"
                />





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_news_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="21dp"
        android:clickable="true"
        android:contentDescription="@string/alert_dialog"
        app:srcCompat="@drawable/ic_baseline_add_24" />
</RelativeLayout>